[project]
name = "connexion-flask-example"
version = "0.1.0"
description = "Connexion 3.x Flask WSGI Example"
requires-python = ">=3.9"
dependencies = [
    "connexion[flask,swagger-ui,uvicorn]>=3.3.0",
    "flask>=3.0.0",
    "gunicorn>=23.0.0",
    "uvicorn>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
