[project]
name = "connexion-flask-example"
version = "0.1.0"
description = "Connexion 3.x ASGI Example"
requires-python = ">=3.14"
dependencies = [
    "connexion[swagger-ui]>=3.3.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.0.0",
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
